book search readme update

--- a/assets/documents/book-search.html
+++ b/assets/documents/book-search.html
@@ -408,12 +408,22 @@ blockquote {
 <li>Serve the app from a Node/Express server and store saved information in a Mongo database.</li>
 </ul>
 <h2 id="project-features">Project Features</h2>
-<h3 id="coming-soon">(Coming Soon...)</h3>
+<ul>
+<li>Allows users to enter a search term (title, author, publisher, etc.) to search for books using the Google Books API.</li>
+<li>The top 10 matches for the query are displayed to the user.</li>
+<li>Users can save books to the database.</li>
+<li>Users can create an account or use the site as a guest.</li>
+<li>Any user can save books to the &quot;Public List&quot; which is shared by all site visitors.</li>
+<li>Users who are logged in can also save books to their personal list which can not be viewed by other users.</li>
+<li>Privacy settings can be adjusted so that users can choose to share their username or email address or remain anonymous when they post to the Public List.</li>
+</ul>
 <h2 id="technologies-used">Technologies Used</h2>
 <h4 id="front-end">Front End</h4>
 <ul>
 <li>React</li>
 <li>Bulma</li>
+<li>Axios</li>
+<li>Moment</li>
 </ul>
 <h4 id="back-end">Back End</h4>
 <ul>
@@ -421,10 +431,23 @@ blockquote {
 <li>Express</li>
 <li>Node</li>
 <li>MongoDB</li>
+<li>Other npm packages used:
+<ul>
+<li>iso-639-1</li>
+<li>Morgan</li>
+<li>Path</li>
+<li>Dotenv</li>
+<li>Connect-ensure-login</li>
+<li>Cookie-parser</li>
+</ul>
+</li>
+</ul>
+<h4 id="public-apis">Public APIs</h4>
+<ul>
+<li>Google Books API</li>
 </ul>
 <h2 id="instructions-for-use">Instructions for Use</h2>
-<h4 id="building-the-app">Building the App</h4>
-<h4 id="running-the-app">Running the App</h4>
+<h3 id="coming-soon">(Coming Soon...)</h3>
 <h2 id="developer">Developer</h2>
 <p>This project is developed and maintained by David Knittel. Any and all questions, comments, suggestions, or proposed contributions are welcome.</p>
 <ul>
