--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
               <span><i class="fas fa-phone"></i></span>
               <p>(785) 410-5644</p>
             </a>
-            <a href="assets/documents/Resume-David-Knittel.pdf" class="contact-method">
+            <a href="assets/documents/Resume-David-Knittel.pdf" class="contact-method" target="_blank" rel="noopener noreferrer">
               <p>Download my</p>
               <span>Resume</span>
             </a>
