--- a/assets/documents/expense.html
+++ b/assets/documents/expense.html
@@ -6,8 +6,9 @@
 
 <style>
 /*---------------------------------------------------------------------------------------------
+ *  This page was translated from a markdown by Markdown PDF (https://marketplace.visualstudio.com/items?itemName=yzane.markdown-pdf).
  *  Copyright (c) Microsoft Corporation. All rights reserved.
- *  Licensed under the MIT License. See License.txt in the project root for license information.
+ *  Licensed under the MIT License.
  *--------------------------------------------------------------------------------------------*/
 
 body {
