cerebellum info update

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   </div>
                   <div class="card-body">
                     <h6>My Role</h6>
-                    Part of a four person team. I was responsible for user authentication with Passport, Express.js server setup, MongoDB setup, database controllers, API routes, and mobile responsiveness. 
+                    Part of a four person team. I was responsible for user authentication with Passport, Express.js server setup, MongoDB setup, database models and controllers, API routes, and mobile responsiveness. I was also responsible for integrating Nodemailer, Vue Croppa, and the Meetup API into the project.
                   </div>
                   <div class="card-body">
                     <h6>Technologies Used</h6>
