guest account links

--- a/index.html
+++ b/index.html
@@ -240,12 +240,18 @@
                       </div>
                     </div>
                   </div>
+                  <div class="card-body">
+                    <h6>Note</h6>
+                    The "Deployed Page" link below will automatically log you in to the guest account.
+                    <br />
+                    If you wish to create your own account, use <a href="https://cerebellum-network.herokuapp.com/" target="_blank" rel="noopener noreferrer">this link</a>.
+                  </div>
                   <div class="card-footer">
                     <div class="btn-group" role="group" aria-label="links">
                       <a href="https://github.com/huntertrammell/Dev-Social-Network/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                         <span>Repository</span>
                       </a>
-                      <a href="https://cerebellum-network.herokuapp.com/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
+                      <a href="https://cerebellum-network.herokuapp.com/guest-login/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
                         <span>Deployed<br>Page</span>
                       </a>
                       <a href="./assets/documents/cerebellum.html" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
@@ -301,12 +307,18 @@
                       </div>
                     </div>
                   </div>
+                  <div class="card-body">
+                    <h6>Note</h6>
+                    The "Deployed Page" link below will automatically log you in to the guest account.
+                    <br />
+                    If you wish to create your own account, use <a href="https://quiet-spire-74175.herokuapp.com/" target="_blank" rel="noopener noreferrer">this link</a>.
+                  </div>
                   <div class="card-footer">
                     <div class="btn-group" role="group" aria-label="links">
                       <a href="https://github.com/djknit/Expense" class="btn btn-secondary" target="_blank">
                         <span>Repository</span>
                       </a>
-                      <a href="https://quiet-spire-74175.herokuapp.com/" class="btn btn-secondary" target="_blank">
+                      <a href="https://quiet-spire-74175.herokuapp.com/guest-login/" class="btn btn-secondary" target="_blank">
                         <span>Deployed<br>Page</span>
                       </a>
                       <a href="./assets/documents/expense.html" class="btn btn-secondary" target="_blank">
