typo in about section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             programming. I believe that writing code and practicing mathematics
             require very similar skill sets. My experience writing mathematical
             proofs gave me an understanding of the same logical structures that
-            are used in programming. I am can succeed in fast paced,
+            are used in programming. I am able to succeed in fast paced,
             team-driven environments. I can follow directions well, or take
             initiative where appropriate.
           </p>
