book search note; picture and resume update

--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
                       </div>
                     </div>
                   </div>
+                  <div class="card-body">
+                    <h6>Note</h6>
+                    Many of the features of this app can used without an account. If you wish to create an account, you can do so with only a username and password. For these reasons, there is no guest account for this app.
+                  </div>
                   <div class="card-footer">
                     <div class="btn-group" role="group" aria-label="links">
                       <a href="https://github.com/djknit/google-books-search/" class="btn btn-secondary" target="_blank" rel="noopener noreferrer">
