book search note typo

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   </div>
                   <div class="card-body">
                     <h6>Note</h6>
-                    Many of the features of this app can used without an account. If you wish to create an account, you can do so with only a username and password. For these reasons, there is no guest account for this app.
+                    Many of the features of this app can be used without an account. If you wish to create an account, you can do so with only a username and password. For these reasons, there is no guest account for this app.
                   </div>
                   <div class="card-footer">
                     <div class="btn-group" role="group" aria-label="links">
