side nav menu added

--- a/index.html
+++ b/index.html
@@ -44,12 +44,37 @@
           <a href="#about">About</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
-          <a href="./assets/documents/Resume-David-Knittel.pdf" target="_blank" rel="noopener noreferrer">
+          <a
+            href="./assets/documents/Resume-David-Knittel.pdf"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <span>Resume</span>
           </a>
         </nav>
       </div>
     </header>
+
+    <div id="side-nav-menu" state="hide">
+      <button id="side-nav-toggle" state="closed">
+        <i class="far fa-compass"></i>
+      </button>
+      <nav state="closed">
+        <a href="#about">About</a>
+        <br />
+        <a href="#projects">Projects</a>
+        <br />
+        <a href="#contact">Contact</a>
+        <br />
+        <a
+          href="./assets/documents/Resume-David-Knittel.pdf"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span>Resume</span>
+        </a>
+      </nav>
+    </div>
 
     <div class="container">
       <section id="about">
