small updates to side menu

--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     </header>
 
     <div id="side-nav-menu" state="hide">
-      <button id="side-nav-toggle" state="closed">
+      <button
+        id="side-nav-toggle"
+        state="closed"
+        title="Open navigation menu"
+      >
         <i class="far fa-compass"></i>
       </button>
       <nav state="closed">
