"mongoose ORM" => "mongoose"

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                           <li><a href="https://www.mongodb.com/what-is-mongodb/" target="_blank" rel="noopener noreferrer">
                             MongoDB</a></li>
                           <li><a href="https://mongoosejs.com/" target="_blank" rel="noopener noreferrer">
-                            Mongoose ORM</a></li>
+                            Mongoose</a></li>
                           <li><a href="https://www.npmjs.com/package/axios/" target="_blank" rel="noopener noreferrer">
                             Axios</a></li>
                           <li><a href="https://github.com/cheeriojs/cheerio#readme" target="_blank" rel="noopener noreferrer">
