--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             alt="David Knittel"
           />
           <h1 id="main-heading">
-            David Knittel: An excited new member of the coding community with a
-            hunger for knowledge.
+            David Knittel: An enthusiastic member of the coding community with a
+            hunger for knowledge
           </h1>
         </div>
         <div id="about-basic">
