--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <img src="assets/images/book_search.png" alt="Book Search screenshot" />
                   </div>
                   <div class="card-body">
-                    This app uses the Google Books API to allow users to search for books. Information and links for the books are displayed together. Users may save book information to the database. Books can be saved to the public list which is shared among all users or to the user's private list. Authentication is managed using the Passport.js Local Strategy. Passwords are hashed before being saved to the database. Authentication is verified each time a user attempts to access their data. A password reset link is generated upon a user's request and sent to the email address associate with the user's account.
+                    This app uses the Google Books API to allow users to search for books. Information and links for the books are displayed together. Users may save book information to the database. Books can be saved to the public list which is shared among all users or to the user's private list. Authentication is managed using the Passport.js Local Strategy. Passwords are hashed before being saved to the database. Authentication is verified each time a user attempts to access their data. A password reset link is generated upon a user's request and sent to the email address associated with the user's account.
                   </div>
                   <div class="card-body">
                     <h6>My Role</h6>
