fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </div>
     </header>
 
+    <!-- 2nd nav menu to display when header nav is off screen -->
     <div id="side-nav-menu" state="hide">
       <button
         id="side-nav-toggle"
@@ -89,7 +90,7 @@
             alt="David Knittel"
           />
           <h1 id="main-heading">
-            David Knittel: An enthusiastic member of the coding community with a
+            <span>David Knittel: </span>An enthusiastic member of the coding community with a
             hunger for knowledge
           </h1>
         </div>
