updated resume; minor adjustments to index.html

--- a/index.html
+++ b/index.html
@@ -327,9 +327,8 @@
                             AngularJS</a></li>
                           <li><a href="https://getbootstrap.com/" target="_blank" rel="noopener">
                             Bootstrap</a></li>
-                          <li>
-                            <a href="https://github.com/angular/angular-seed" target="_blank" rel="noopener">
-                              Angular-Seed</a></li>
+                          <li><a href="https://github.com/angular/angular-seed" target="_blank" rel="noopener">
+                            Angular-Seed</a></li>
                         </ul>
                       </div>
                       <div class="col-6">
@@ -693,7 +692,7 @@
               <img src="assets/images/email.png" alt="Email symbol" />
               <p>djknit@gmail.com</p>
             </a>
-            <a href="https://www.linkedin.com/in/david-knittel-675a20167/" class="contact-method" target="_blank" rel="noopener">
+            <a href="https://www.linkedin.com/in/djknit/" class="contact-method" target="_blank" rel="noopener">
               <p>Or visit my</p>
               <img src="assets/images/linked_in_logo.png" alt="LinkedIn logo" />
             </a>
@@ -716,13 +715,13 @@
     </div>
 
     <footer>
-        <a
-          href="https://github.com/djknit/djknit.github.io"
-          target="_blank"
-          rel="noopener"
-        >
-          <i class="fab fa-github"></i> Repository for this page
-        </a>
+      <a
+        href="https://github.com/djknit/djknit.github.io"
+        target="_blank"
+        rel="noopener"
+      >
+        <i class="fab fa-github"></i> Repository for this page
+      </a>
     </footer>
 
     <!-- Linking my javascript -->
