updated defunct links to tech used

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             Node</a></li>
                           <li><a href="https://www.npmjs.com/package/axios/" target="_blank" rel="noopener">
                             Axios</a></li>
-                          <li><a href="https://baianat.github.io/vee-validate/" target="_blank" rel="noopener">
+                          <li><a href="https://vee-validate.logaretm.com/" target="_blank" rel="noopener">
                             VeeValidate</a></li>
                           <li><a href="https://zhanziyang.github.io/vue-croppa/#/" target="_blank" rel="noopener">
                             Vue Croppa</a></li>
@@ -401,7 +401,7 @@
                             Express</a></li>
                           <li><a href="https://dev.mysql.com/doc/refman/8.0/en/introduction.html" target="_blank">
                             MySQL</a></li>
-                          <li><a href="http://docs.sequelizejs.com/" target="_blank">
+                          <li><a href="https://sequelize.org/v4/" target="_blank">
                             Sequelize</a></li>
                         </ul>
                       </div>
