added timeclock. removed non-working and uninteresting projects. updated resume.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,80 @@
             <div class="row">
               <div class="col-xl-6">
                 <div class="project card">
+                  <div class="card-header"><h3>Timeclock</h3></div>
+                  <div class="card-body">
+                    <img src="assets/images/timeclock.png" alt="Timeclock screenshot" />
+                  </div>
+                  <div class="card-body">
+                    Timeclock is an original time tracking app that I built to cover my real life use case of tracking work time and provide some additional features not commonly available on similar existing apps. Includes user authentication with password hashing and secured routes to prevent unauthorized data access. Can track time for any number of jobs. Optionally can calculate earnings based upon pay settings for the job. All setting values can be changed over time. As many parameters as possible are made to be editable settings, so the default values can be used by most users for an easy experience, but users with specific use cases can still make all the adjustments necessary to get the exact behavior they are looking for.
+                  </div>
+                  <div class="card-body">
+                    <h6>My Role</h6>
+                    Sole Developer
+                  </div>
+                  <div class="card-body">
+                    <h6>Technologies Used</h6>
+                    <div class="row">
+                      <div class="col-6">
+                        <label>Front End</label>
+                        <ul>
+                          <li><a href="https://reactjs.org/" target="_blank" rel="noopener">
+                            React</a></li>
+                          <li><a href="https://bulma.io/" target="_blank" rel="noopener">
+                            Bulma</a></li>
+                          <li><a href="https://nodejs.org/en/about/" target="_blank" rel="noopener">
+                            Node</a></li>
+                          <li><a href="https://www.npmjs.com/package/axios/" target="_blank" rel="noopener">
+                            Axios</a></li>
+                          <li><a href="http://momentjs.com/" target="_blank" rel="noopener">
+                            Moment Timezone</a></li>
+                        </ul>
+                        <br />
+                      </div>
+                      <div class="col-6">
+                        <label>Back End</label>
+                        <ul>
+                          <li><a href="https://nodejs.org/en/about/" target="_blank" rel="noopener">
+                            Node</a></li>
+                          <li><a href="https://expressjs.com/" target="_blank" rel="noopener">
+                            Express</a></li>
+                          <li><a href="http://www.passportjs.org/" target="_blank" rel="noopener">
+                            Passport</a></li>
+                          <li><a href="https://www.mongodb.com/what-is-mongodb/" target="_blank" rel="noopener">
+                            MongoDB</a></li>
+                          <li><a href="https://mongoosejs.com/" target="_blank" rel="noopener">
+                            Mongoose</a></li>
+                          <li><a href="https://www.npmjs.com/package/bcrypt/" target="_blank" rel="noopener">
+                            Bcrypt</a></li>
+                          <li><a href="http://momentjs.com/" target="_blank" rel="noopener">
+                            Moment Timezone</a></li>
+                          <li><a href="https://www.npmjs.com/package/currency-codes" target="_blank" rel="noopener">
+                            Currency-codes</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-body">
+                    <h6>Note</h6> 
+                    There is no guest account for this app. A username and password are the only required account information, so a fresh account can be takes only a few seconds to create.
+                  </div>
+                  <div class="card-footer">
+                    <div class="btn-group" role="group" aria-label="links">
+                      <a href="https://github.com/djknit/timeclock/" class="btn btn-secondary" target="_blank" rel="noopener">
+                        <span>Repository</span>
+                      </a>
+                      <a href="https://daves-timeclock.herokuapp.com/" class="btn btn-secondary" target="_blank" rel="noopener">
+                        <span>Deployed<br>Page</span>
+                      </a>
+                      <a href="./assets/documents/timeclock.html" class="btn btn-secondary" target="_blank" rel="noopener">
+                        <span>Readme</span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-6">
+                <div class="project card">
                   <div class="card-header"><h3>Book Search</h3></div>
                   <div class="card-body">
                     <img src="assets/images/book_search.png" alt="Book Search screenshot" />
@@ -275,19 +349,16 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h6>Note</h6>
-                    The "Deployed Page" link below will automatically log you in to the guest account.
-                    <br />
-                    If you wish to create your own account, use <a href="https://cerebellum-network.herokuapp.com/" target="_blank" rel="noopener">this link</a>.
+                    Unfortunately, there is no live demo for this app currently.
                   </div>
                   <div class="card-footer">
-                    <div class="btn-group" role="group" aria-label="links">
+                    <div class="btn-group twobtns" role="group" aria-label="links">
                       <a href="https://github.com/huntertrammell/Dev-Social-Network/" class="btn btn-secondary" target="_blank" rel="noopener">
                         <span>Repository</span>
                       </a>
-                      <a href="https://cerebellum-network.herokuapp.com/guest-login/" class="btn btn-secondary" target="_blank" rel="noopener">
+                      <!-- <a href="https://cerebellum-network.herokuapp.com/guest-login/" class="btn btn-secondary" target="_blank" rel="noopener">
                         <span>Deployed<br>Page</span>
-                      </a>
+                      </a> -->
                       <a href="./assets/documents/cerebellum.html" class="btn btn-secondary" target="_blank" rel="noopener">
                         <span>Readme</span>
                       </a>
@@ -361,7 +432,7 @@
               </div>
             -->
 
-              <div class="col-xl-6">
+              <!-- <div class="col-xl-6">
                 <div class="project card">
                   <div class="card-header"><h3>Expense</h3></div>
                   <div class="card-body">
@@ -427,7 +498,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-xl-6">
                 <div class="project card">
                   <div class="card-header"><h3>NPR News Scraper</h3></div>
@@ -489,7 +560,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-6">
+              <!-- <div class="col-xl-6">
                 <div class="project card">
                   <div class="card-header"><h3>Eat-da-Burger</h3></div>
                   <div class="card-body">
@@ -546,8 +617,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-xl-6">
+              </div> -->
+              <!-- <div class="col-xl-6">
                 <div class="project card">
                   <div class="card-header"><h3>Friend Finder</h3></div>
                   <div class="card-body">
@@ -597,8 +668,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-xl-6">
+              </div> -->
+              <!-- <div class="col-xl-6">
                 <div class="project card">
                   <div class="card-header"><h3>LIRI</h3></div>
                   <div class="card-body">
@@ -642,7 +713,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-xl-6">
                 <div class="project card">
                   <div class="card-header"><h3>Food Fight RPG</h3></div>
